math wrap fix

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -12,7 +12,7 @@ height: 40 * $spacing-unit;
 //max-height: 20%;
 //max-width: 20%;
 max-width: 15%;
-border-radius: 100px;
+//border-radius: 100px;
 
 }
 
@@ -77,7 +77,8 @@ height: 100%;
   background-color: $wrapper_color;
   flex-direction: row;
   justify-content: center;
-  flex: 1;
+  padding-top: .5 * $spacing-unit;
+  //flex: 1;
   //flex-grow: 1;
 //margin: 5px auto;
 //max-width: 33%;
@@ -96,10 +97,10 @@ height: 100%;
   align-items: center;
   //transform: translateY(15%);
   line-height: 1em;
-  height: 90%;
+  //height: 5* $spacing-unit;
   //min-height: 197px;
-  padding-left: 5%;
-  padding-right: 5%;
+  //padding-left: 5%;
+  //padding-right: 5%;
 
 }
 
@@ -134,6 +135,7 @@ height: 100%;
   @include relative-font-size(.75);
   line-height: $base-line-height * $base-font-size * 1.2;
   //white-space:nowrap; 
+  margin: 0;
 }
 
 .site-title {
@@ -144,7 +146,8 @@ height: 100%;
   font-weight: 300;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: 1px;
-  //margin-bottom: .5 * $spacing-unit;
+  margin: 0;
+  margin-bottom: 5%;
   //margin-top: 1 * $spacing-unit;
 
 
@@ -506,6 +509,7 @@ height: 100%;
   background-color: $post-color;
   vertical-align: middle;
   max-width: 80%;
+  white-space: wrap;
 
  > p {
   width: 100%;
@@ -514,7 +518,13 @@ height: 100%;
   margin: 0;
   margin-left: .25 * $spacing-unit;
   }
+
 }
+
+.mjx-chtml.MathJax_CHTML {
+  white-space: wrap;
+}
+
 
 
 .flow-chart {
